fix: added 'text-align: left' to css files of TabsTypeA and TabsTypeB components in src and lib and released version 0.0.7

--- a/src/components/TabsTypeA/index.module.css
+++ b/src/components/TabsTypeA/index.module.css
@@ -32,4 +32,8 @@
 
 .tab-content {
   padding: 18px 0;
+  text-align: left;
+  /* We will decide after real world use case whether we should give min height or not (Note:- if you uncomment
+   "min-height" here then aslo add it to index.module.css file of TabsTypeA component in lib folder) */
+  /* min-height: 210px; */
 }
